WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74613
[qt][wk2] Viewport info panel shows wrong current scale
https://bugs.webkit.org/show_bug.cgi?id=74613
Summary
[qt][wk2] Viewport info panel shows wrong current scale
Michael Brüning
Reported
2011-12-15 09:06:26 PST
The viewport info panel in the qt MiniBrowser shows the item scale, not the css scale.
Attachments
Proposed patch.
(4.62 KB, patch)
2011-12-15 09:24 PST
,
Michael Brüning
no flags
Details
Formatted Diff
Diff
Update patch.
(3.99 KB, patch)
2011-12-15 09:34 PST
,
Michael Brüning
kenneth
: review+
Details
Formatted Diff
Diff
Updated patch.
(6.71 KB, patch)
2011-12-16 02:08 PST
,
Michael Brüning
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Michael Brüning
Comment 1
2011-12-15 09:24:07 PST
Created
attachment 119438
[details]
Proposed patch. Current scale is now calculated by dividing the item scale by the devicePixelRatio.
Michael Brüning
Comment 2
2011-12-15 09:34:58 PST
Created
attachment 119440
[details]
Update patch. Updated patch so it is limited to qwebviewport.cpp and qwebviewport_p.h and corrected whitespace error introduced in previous version's ChangeLog.
Kenneth Rohde Christiansen
Comment 3
2011-12-15 12:59:03 PST
Comment on
attachment 119440
[details]
Update patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=119440&action=review
> Source/WebKit2/UIProcess/API/qt/qwebviewportinfo.cpp:49 > + return m_webViewPrivate->pageView->scale() / m_webViewPrivate->interactionEngine->constraints().devicePixelRatio;
There are methods for doing this in the interaction engine class. Could you see if it is possible to use them?
Michael Brüning
Comment 4
2011-12-16 01:13:05 PST
> There are methods for doing this in the interaction engine class. Could you see if it is possible to use them?
Will check if that's possible...
Michael Brüning
Comment 5
2011-12-16 02:08:14 PST
Created
attachment 119587
[details]
Updated patch. Added method currentCSSScale to QtViewportInteractionEngine and changed QWebViewportInfo to use this to return the scale. Also changed one place in QtViewportInteractionEngine to use this new method.
WebKit Review Bot
Comment 6
2011-12-16 03:27:51 PST
Comment on
attachment 119587
[details]
Updated patch. Clearing flags on attachment: 119587 Committed
r103054
: <
http://trac.webkit.org/changeset/103054
>
WebKit Review Bot
Comment 7
2011-12-16 03:27:56 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug